# templabot

./: Cargo.toml  README.md
.github/workflows/: main.yml
example/: repos.toml
src/: main.rs  utils.rs
