[package]
name = "templabot"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version ="4.1.4", features = ["derive"]}
dir-cmp = "0.1.0"
env_logger = "0.10"
git2 = "0.15.0"
log = "0.4"
regex = "1"
serde = "1"
serde_derive = "1"
tempfile = "3"
toml = "0.7"